blocks/modal.css
.modal {
    visibility: hidden;
    position: fixed;
    background-color: #00000080;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: opacity 0s ease, visibility 0.3s ease;
}

.modal_is-opened {
    visibility: visible;
    opacity: 1;
}

.modal__container {
    position: relative;
    width: 100%;
    max-width: 730px;
    margin: 100px auto;
    padding: 32px 50px;
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
}

.modal__close-btn {
    position: absolute;
    top: 32px;
    right: 50px;
    width: 40px;
    height: 40px;
    background: none;
    border: none;
    font-size: 16px;
    cursor: pointer;
    background-image: url(../images/closebtn.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
}

.modal__close-btn:hover {
  background-color: #2196f3;
  color: #fff;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.modal__title {
    margin: 0 0 32px;
    font-size: 24px;
}

.modal__form {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.modal__label {
    margin: 0 0 32px;
}

.modal__input {
  width: 100%;
  box-sizing: border-box;
  border: 1px solid rgba(33, 33, 33, 0.4);
  border-radius: 8px;
  font-size: 20px;
  line-height: 1;
  padding: 16px 12px 16px;
  margin: 8px 0 0;
  color: #212121;
}

.modal__input::placeholder {
    color: #2121214d;
}

.modal__submit-btn {
  font-size: 16px;
  line-height: 1;
  color: #fcf5e5;
  width: 100%;
  max-width: 156px;
  padding: 18px 0;
  background: #212121;
  border-radius: 8px;
  border: none;
  transition: 0.3s;
}

